force-app/main/default/objects/Reconciliation_Line__c/Reconciliation_Line__c.object-meta.xml
<CustomObject>
    <description>One row per Budget Line in the reconciliation result set. Stores the matched Counterpoint actuals aggregate, the dollar and unit variance, and the reconciliation status for reporting. Unmatched Actuals (orders with no corresponding Budget Line) are also stored here.</description>
    <label>Reconciliation Line</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Reconciliation Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>

    <listViews>
        <fullName>All_Reconciliation_Lines</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Status__c</columns>
        <columns>Advertising_Opportunity__c</columns>
        <columns>Channel__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Month__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Planned_Amount__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Variance_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Reconciliation Lines</label>
    </listViews>
</CustomObject>