force-app/main/default/objects/Reconciliation_Line__c/fields/Actual_Spot_Count__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spot_Count__c</fullName>
    <description>Count of Counterpoint actuals records that matched this Budget Line (or that are unmatched for Unmatched Actual rows).</description>
    <label>Actual Spot Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>