force-app/main/default/objects/Reconciliation_Line__c/fields/Advertising_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Opportunity__c</fullName>
    <description>The Advertising Opportunity this reconciliation line belongs to. Null for Unmatched Actual rows with no linked contract.</description>
    <label>Advertising Opportunity</label>
    <referenceTo>Advertising_Opportunity__c</referenceTo>
    <relationshipLabel>Reconciliation Lines</relationshipLabel>
    <relationshipName>Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>