force-app/main/default/objects/Reconciliation_Line__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <description>The planned Budget Line this reconciliation row covers. Null for Unmatched Actual rows.</description>
    <label>Budget Line</label>
    <referenceTo>Budget_Line__c</referenceTo>
    <relationshipLabel>Reconciliation Lines</relationshipLabel>
    <relationshipName>Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>