force-app/main/default/objects/Reconciliation_Line__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>The station (Channel) this reconciliation line covers.</description>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Reconciliation Lines</relationshipLabel>
    <relationshipName>Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>