force-app/main/default/objects/Reconciliation_Line__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>The fiscal year this reconciliation line covers (e.g., 2026). Derived from the actuals effective date for Unmatched Actual rows.</description>
    <label>Fiscal Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>