force-app/main/default/objects/Reconciliation_Line__c/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <description>Composite external ID used for idempotent upsert. Format: BL|{BudgetLineId} for budget-line rows; ACT|{Channel}|{Vehicle}|{Month}|{Year} for unmatched actuals. Re-running reconciliation overwrites existing rows rather than creating duplicates.</description>
    <externalId>true</externalId>
    <label>Match Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>