force-app/main/default/objects/Reconciliation_Line__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>The calendar month this reconciliation line covers (e.g., January). Derived from the actuals effective date for Unmatched Actual rows.</description>
    <label>Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>