force-app/main/default/objects/Reconciliation_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The Opportunity this reconciliation line belongs to. Null for Unmatched Actual rows with no linked contract.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reconciliation Lines</relationshipLabel>
    <relationshipName>Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>