force-app/main/default/objects/Reconciliation_Line__c/fields/Planned_Weekly_Spots__c.field-meta.xml
<CustomField>
    <fullName>Planned_Weekly_Spots__c</fullName>
    <description>Weekly spot count from the Budget Line (Budget_Line__c.Weekly_Spots__c). Compare against Actual Spot Count to check delivery volume.</description>
    <label>Planned Weekly Spots</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>