force-app/main/default/objects/Reconciliation_Line__c/fields/Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Status__c</fullName>
    <description>Result of matching this Budget Line against Counterpoint actuals. Matched = amounts agree within tolerance. Variance = match found but amounts differ. Unmatched Order = Budget Line has no corresponding actuals. Unmatched Actual = actuals exist with no corresponding Budget Line.</description>
    <label>Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Matched</fullName><default>false</default><label>Matched</label></value>
            <value><fullName>Variance</fullName><default>false</default><label>Variance</label></value>
            <value><fullName>Unmatched Order</fullName><default>false</default><label>Unmatched Order</label></value>
            <value><fullName>Unmatched Actual</fullName><default>false</default><label>Unmatched Actual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>