force-app/main/default/objects/Reconciliation_Line__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <description>The program vehicle this reconciliation line covers.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Reconciliation Lines</relationshipLabel>
    <relationshipName>Reconciliation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>